# back

./: README.md  crawling.py  environment.yml  main.py  pyproject.toml
AI/: Dockerfile  main.py  requirements.txt
AIE/: main.py
CBE/: main.py
EE/: main.py
SSE/: data.json  main.py
const/: kakao_conversation.py
crawling/: crawling_first.py  crawling_main.py  crawling_today.py
cse/: crawl_notices.py  general.py  graduate.py  important.py  job.py  main.py  under.py
cse/main/: index.py
cse_main/: cse_main.py
kor/: main.py
mec/: main.py
model/: major.py
tests/: test_ai_main.py  test_aie_main.py  test_cbe_main.py  test_crawling_first.py  test_crawling_main.py  test_crawling_today.py  test_cse_main.py  test_ee_main.py  test_kor_main.py  test_mec_main.py  test_sse_main.py
