[project]
name = "back"
version = "0.1.0"
description = ""
authors = [
    {name = "naya-h2",email = "hw7666@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium (>=4.31.0,<5.0.0)",
    "fake-useragent (>=2.1.0,<3.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pyshorteners (>=1.0.1,<2.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
